--- a/wedding-wise-app/src/App.css
+++ b/wedding-wise-app/src/App.css
@@ -16,12 +16,25 @@
   width: 50px;
 }
 
+.supplier-card-image-package {
+  max-width: 100%;
+  height: 100%;
+  aspect-ratio: 1;
+  object-fit: cover;
+  border-radius: 16px;
+  background-position: center;
+  box-shadow: 0px 15px 15px -3px rgba(0, 0, 0, 0.1);
+}
+
 .supplier-card-image {
   max-width: 100%;
   height: 100%;
-  aspect-ratio: 1/1.25;
+  aspect-ratio: 1/1;
   object-fit: cover;
-
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  box-shadow: 0px 15px 15px -3px rgba(0, 0, 0, 0.1);
+  border-radius: 16px;
 }
 
 .supplier-card-sticker {
