--- a/wedding-wise-app/src/App.css
+++ b/wedding-wise-app/src/App.css
@@ -26,7 +26,7 @@
 }
 
 .supplier-card-image-package {
-  max-width: 100%;
+  min-width: 100%;
   height: 100%;
   aspect-ratio: 1;
   object-fit: cover;
@@ -36,7 +36,7 @@
 }
 
 .supplier-card-image {
-  max-width: 100%;
+  min-width: 100%;
   height: 100%;
   aspect-ratio: 1/1;
   object-fit: cover;
@@ -76,7 +76,7 @@
   object-fit: contain;
   border-radius: 10%;
   background-position: center;
-  box-shadow: 20px 15px 15px -3px rgba(0,0,0,0.1);
+  box-shadow: 20px 15px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 @media screen and (max-width: 900px) {
@@ -104,4 +104,3 @@
 .slick-list {
   margin: 0 -10px;
 }
-
