--- a/wedding-wise-app/src/components/ChatPage/chat.css
+++ b/wedding-wise-app/src/components/ChatPage/chat.css
@@ -5,7 +5,7 @@
     color: white;
     width: 75vw;
     height: 82vh;
-    backdrop-filter: blur(19px) saturate(100%);
+    /* backdrop-filter: blur(19px) saturate(100%); */
     background-color: rgba(17, 25, 40, 0.75);
     border-radius: 12px;
     display: flex;
@@ -66,7 +66,8 @@
     font-size: 20px;
     cursor: pointer;
     position: absolute;
-    left: 97.8%;
+    left: 5px;
+    top: 5px;
     width: 25px;
     height: 25px;
     display: flex;
