--- a/wedding-wise-app/src/components/ChatPage/chatList/chatList.css
+++ b/wedding-wise-app/src/components/ChatPage/chatList/chatList.css
@@ -1,9 +1,10 @@
-.chat-list {
+ .chat-list {
     flex: 1;
-    overflow-y: scroll; /* Enable vertical scrolling */
-    scrollbar-width: thin; /* For Firefox */
-    scrollbar-color: rgba(17, 25, 40, 0.8) rgba(17, 25, 40, 0.5); /* For Firefox */
-}
+    overflow-y: scroll; 
+    scrollbar-width: thin; 
+    scrollbar-color: rgba(17, 25, 40, 0.8) rgba(17, 25, 40, 0.5); 
+} 
+
 
 /* WebKit browsers (Chrome, Safari) */
 .chat-list::-webkit-scrollbar {
@@ -98,42 +99,6 @@
 .chat-list .p {
     font-size: 14px;
     font-weight: 300;
-}
-
-
-
-
-
-
-.user-info {
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.user-info .user {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.user-info .img-avatar {
-    width: 50px;
-    height: 50px; 
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-.user-info .icons {
-    display: flex;
-    gap: 20px;
-}
-
-.user-info .img-icons {
-    width: 20px;
-    height: 20px; 
-    cursor: pointer;
-}
+} 
 
 
